# myz

./: README.md  project.md  pyproject.toml
docs/: IMPLEMENTATION_PLAN.md
src/zotero_notes_agent/: __init__.py  cli.py  contracts.py  retriever.py
tests/: test_cli.py  test_contracts.py
