[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zotero-notes-agent"
version = "0.1.0"
description = "M1 retriever and tool-contract layer for Zotero notes"
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "myz"}]
license = {text = "MIT"}
dependencies = []

[project.scripts]
zotero-notes = "zotero_notes_agent.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
